[package]
name = "api-gateway"
version = "0.1.0"
description = "API Gateway with ternary-aware routing, rate limiting, and request/response transformation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/api-gateway"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
hyper = "1"
uuid = { version = "1", features = ["v4"] }
